@@ -6,6 +6,7 @@ Enhancements:
 - #7448 Only add PR comments for internal PR
 - #7445 Update `config.yaml` to support Linux Mint build target
 - #7453 Change default value for dev thanks message
+- #7455 Use EI screen when XDG_SESSION_TYPE is "wayland"
 
 # 1.15.1
 
